ignore more outputs

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 read_count_pipeline/data/
 read_count_pipeline/working/
 read_count_pipeline/temp/
+read_count_pipeline/kalindex_4ref
+read_count_pipeline/output/
+.ipynb_checkpoints/
